--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
-mridata
+mridata==0.2.2
 tensorflow==2.8
 tensorflow-addons==0.16.1
-numpy
-scipy
-ismrmrd
-matplotlib
-seaborn
-imageio
-imageio-ffmpeg
-scikit-image
+tensorflow-probability==0.16.0
+tensorflow-gan==2.1.0
+numpy==1.20
+scipy==1.10.1
+ismrmrd==1.12.3
+matplotlib==3.7.5
+seaborn==0.13.2
+imageio==2.34.1
+imageio-ffmpeg==0.4.9
+scikit-image==0.19.3
 sigpy==0.1.23
-jupyterlab
-scikit-learn
-tensorflow-gan
-cupy-cuda112
+jupyterlab==4.2.0
+scikit-learn==1.4.2
+cupy-cuda112==10.6.0
 protobuf==3.20.*
+ipywidgets==8.1.2
